# fig-edit-agent

./: .env.example  .gitignore  __init__.py  pyproject.toml
core/: __init__.py  config.py  execute_agent.py  firered_edit_backend.py  firered_fast_pipeline.py  firered_manual_pipeline.py  geometry_utils.py  grabcut_refinement.py  llm_client.py  orchestrator.py  plan_agent.py  sam3_point_backend.py
core/_vendor/sam3/: __init__.py  model_builder.py
core/_vendor/sam3/model/: sam3_image.py  tokenizer_ve.py
examples/: left_hand_cutout_demo.py
schemas/: __init__.py  artifact.py  base.py  enums.py  geometry.py  plan.py  planner.py  runtime.py  state.py
tests/: test_llm_client_pydantic_ai.py  test_plan_agent.py
tools/: __init__.py  base.py  image_collage.py  image_crop.py  image_edit.py  image_grounding.py  image_ocr.py  image_score.py  image_segment.py  image_understand.py  prompt_reconstruct.py  registry.py
