[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fig-edit-agent"
version = "0.1.0"
description = "Streamlined schema framework for a DAG + multi-agent image editing system"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "pydantic-ai",
  "python-dotenv>=1.0,<2",
  "openai>=1.0",
  "pillow>=10,<12",
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.8,<5",
]

[project.optional-dependencies]
structured-output-bench = [
  "instructor",
  "langchain",
  "langchain-openai",
  "langgraph",
  "marvin",
  "typechat",
]

[tool.setuptools]
packages = [
  "fig_edit_agent",
  "fig_edit_agent.core",
  "fig_edit_agent.schemas",
  "fig_edit_agent.tools",
  "sam3",
  "sam3.model",
  "sam3.model.utils",
  "sam3.perflib",
  "sam3.sam",
]

[tool.setuptools.package-dir]
"fig_edit_agent" = "."
"fig_edit_agent.core" = "core"
"fig_edit_agent.schemas" = "schemas"
"fig_edit_agent.tools" = "tools"
"sam3" = "core/_vendor/sam3"

[tool.setuptools.package-data]
"sam3" = ["assets/*.txt.gz"]
